--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -96,39 +96,21 @@
 }
 
 .stories {
-    // position: relative;
-    // clear: both;
-    // 
-    padding: 0;
-    list-style: none;
+    max-width: 470px;
+    a {
+        text-decoration: none;
+    }
+
     figure {
-        position: relative;
-        float: left;
-        overflow: hidden;
-        margin: 10px 1%;
-        min-width: 320px;
-        max-width: 530px;
-        max-height: 397px;
-        height: auto;
-        background: #3085a3;
-        text-align: center;
-        cursor: pointer;
+        
         img {
-            position: relative;
-            display: block;
-            opacity: 0.8;
+    
         }
         figcaption {
-            color: #fff;
-            padding: 1.5em; 
-            font-size: 1em; // mobile size
-            line-height: 125%; // mobile size
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            &::before,
-            &::after {
-                pointer-events: none;
-            }
+                color: #fff;
+                padding: 1.5em; 
+                font-size: 1em; // mobile size
+                line-height: 125%; // mobile size
         }
         h2 {
             margin: 0;
@@ -147,66 +129,42 @@
 
 .stories figure figcaption,
 .stories figure figcaption > a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000; // Make sure link is available for touch 
+   
 }
 
 /** Story Effect **/
 figure.effect-story {
     background: #030c17;
     img {
-        opacity: 0.9;
-        transition: opacity 0.35s;
+
     }
     h2 {
-        margin: 8% 0 10px 0;
-        transition: transform 0.35s;
+       
     }
     p {
-        padding: 1em;
-        opacity: 0;
-        transition: opacity 0.35s, transform 0.35s;
-        transform: scale(1.5);
+
     }
     &:hover h2 {
-        transform: scale(0.9);
+
     }
     figcaption {
         p {
             font-family: $font__sans;
-        }
-        &::before {
-            position: absolute;
-            top: 30px;
-            right: 30px;
-            bottom: 30px;
-            left: 30px;
-            border: 2px solid #fff;
-            box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.2);
-            content: '';
-            opacity: 0;
-            transition: opacity 0.35s, transform 0.35s;
-            transform: scale3d(1.4, 1.4, 1);
         }
     }
 }
 
 figure.effect-story:hover figcaption::before,
 figure.effect-story:hover p {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
+
 }
 
 figure.effect-story:hover figcaption {
-    background-color: rgba(58, 52, 42, 0);
+
 }
 
 figure.effect-story:hover img {
-    opacity: 0.4;
+
 }
 
 
@@ -215,6 +173,9 @@ figure.effect-story:hover img {
     	.stories-gallery {
     		display: grid;
             grid-template-columns: 1fr 1fr;
+            grid-gap: 1em;
+            max-width: 956px;
+
     		.stories {
                 min-width: 470px;
     			figure {
@@ -222,6 +183,9 @@ figure.effect-story:hover img {
     					width: 470px;
     					height: 360px;
     				}
+                    p {
+                        padding: 0;
+                    }
 
     			}
     		}
