--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -170,19 +170,26 @@ figure.effect-story:hover img {
 
 @supports (grid-area: auto) {
     @media screen and (min-width: $query__small) {
-    	.stories-gallery {
+    	figure.effect-story {
+            height: 100%;
+        }
+
+        .stories-gallery {
     		display: grid;
             grid-template-columns: 1fr 1fr;
             grid-gap: 1em;
             max-width: 956px;
 
-    		.stories {
+            .stories {
                 min-width: 470px;
+
     			figure {
     				img {
     					width: 470px;
     					height: 360px;
     				}
+                    figcaption {
+                    }
                     p {
                         padding: 0;
                     }
