--- a/style-human.css
+++ b/style-human.css
@@ -1561,15 +1561,7 @@ img#portrait {
     grid-gap: 1em;
   }
 
-  .effect-story {
-    background: #030c17;
-    display: grid;
-  }
-  .effect-story img, .effect-story figcaption {
-    grid-column: 1;
-    grid-row: 1;
-  }
-  .effect-story figcaption {
+  figcaption {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
@@ -1582,19 +1574,27 @@ img#portrait {
         flex-direction: column;
     opacity: 0;
     font-family: "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
-  }
-  .effect-story figcaption.text-on {
-    opacity: 1;
-    transition: opacity 0.75s, transform 0.75s;
-    background-color: rgba(0, 0, 0, 0.6);
-  }
-  .effect-story figcaption.text-off {
     opacity: 0;
-    transition: opacity 0.75s, transform 0.75s;
-    background-color: none;
+  }
+
+  .effect-story {
+    background: #030c17;
+    display: grid;
+  }
+  .effect-story img, .effect-story figcaption {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .effect-story figcaption {
+    transition: opacity 1.5s, transform 1.5s;
   }
   .effect-story p {
     text-align: center;
+  }
+  .effect-story:hover figcaption {
+    opacity: 1;
+    transition: opacity 0.75s, transform 0.75s;
+    background-color: rgba(0, 0, 0, 0.6);
   }
 
   @media screen and (min-width: 768px) {
