--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -153,11 +153,12 @@
         }
         figcaption {
              transition: opacity 1.5s, transform 1.5s;
+             background-color: none;
         }
         p {
             text-align: center;
         }
-        &:hover figcaption {
+        &:hover figcaption, &:focus figcaption {
             opacity: 1;
             transition: opacity 0.75s, transform 0.75s;
             background-color:rgba(0,0,0,0.6);
