--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1564,7 +1564,7 @@ img#portrait {
     grid-row: 1;
   }
   .effect-story figcaption {
-    transition: opacity 1.5s, transform 1.5s;
+    transition: all 1.5s;
     background-color: none;
   }
   .effect-story p {
@@ -1572,7 +1572,7 @@ img#portrait {
   }
   .effect-story:hover figcaption, .effect-story:focus figcaption {
     opacity: 1;
-    transition: opacity 0.75s, transform 0.75s;
+    transition: all 0.75s;
     background-color: rgba(0, 0, 0, 0.6);
   }
 
