--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1520,13 +1520,13 @@ img#portrait {
 .stories figure figcaption {
   color: #fff;
   padding: 1.5em;
-  font-size: 1em;
+  font-size: 0.85em;
   line-height: 125%;
 }
 .stories figure h2 {
   margin: 0;
   line-height: 125%;
-  font-size: 25px;
+  font-size: 17px;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -1566,6 +1566,11 @@ img#portrait {
   .effect-story figcaption {
     transition: all 1.5s;
     background-color: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   .effect-story p {
     text-align: center;
@@ -1576,37 +1581,43 @@ img#portrait {
     background-color: rgba(0, 0, 0, 0.6);
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 415px) {
+    .stories figure h2 {
+      font-size: 25px;
+    }
+
+    .stories figure figcaption {
+      font-size: 1em;
+    }
+  }
+  @media screen and (min-width: 500px) {
     .stories-gallery {
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 1em;
-      max-width: 956px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     .stories {
-      min-width: 470px;
+      padding-bottom: 1em;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .stories-gallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
 
-    .effect-story {
-      display: grid;
+    .stories {
+      padding-bottom: 0;
     }
-    .effect-story img, .effect-story figcaption {
-      grid-column: 1;
-      grid-row: 1;
+  }
+  @media screen and (min-width: 992px) {
+    .stories-gallery {
+      grid-template-columns: 1fr 1fr 1fr;
     }
-    .effect-story img {
-      width: 470px;
-      height: 360px;
-    }
-    .effect-story figcaption {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-    .effect-story p {
-      text-align: center;
+
+    .stories figure figcaption {
+      padding: 0.2em;
     }
   }
 }
