--- a/style-human.css
+++ b/style-human.css
@@ -1537,13 +1537,13 @@ img#portrait {
 .stories figure figcaption {
   color: #fff;
   padding: 1.5em;
-  font-size: 1em;
+  font-size: 0.85em;
   line-height: 125%;
 }
 .stories figure h2 {
   margin: 0;
   line-height: 125%;
-  font-size: 25px;
+  font-size: 17px;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -1588,6 +1588,16 @@ img#portrait {
   .effect-story figcaption {
     transition: all 1.5s;
     background-color: none;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-align: center;
+        align-items: center;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-direction: column;
+        flex-direction: column;
   }
   .effect-story p {
     text-align: center;
@@ -1598,42 +1608,46 @@ img#portrait {
     background-color: rgba(0, 0, 0, 0.6);
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 415px) {
+    .stories figure h2 {
+      font-size: 25px;
+    }
+
+    .stories figure figcaption {
+      font-size: 1em;
+    }
+  }
+  @media screen and (min-width: 500px) {
     .stories-gallery {
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 1em;
-      max-width: 956px;
-    }
-
-    .stories {
-      min-width: 470px;
-    }
-
-    .effect-story {
-      display: grid;
-    }
-    .effect-story img, .effect-story figcaption {
-      grid-column: 1;
-      grid-row: 1;
-    }
-    .effect-story img {
-      width: 470px;
-      height: 360px;
-    }
-    .effect-story figcaption {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-      -ms-flex-align: center;
-          align-items: center;
       -ms-flex-pack: center;
           justify-content: center;
-      -ms-flex-direction: column;
-          flex-direction: column;
     }
-    .effect-story p {
-      text-align: center;
+
+    .stories {
+      padding-bottom: 1em;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    .stories-gallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    .stories {
+      padding-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 992px) {
+    .stories-gallery {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .stories figure figcaption {
+      padding: 0.2em;
     }
   }
 }
