--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -184,12 +184,11 @@
 
     @media screen and (min-width: 500px) {
         .stories-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            grid-template-columns: 10% 90% 10%;
+            grid-row-gap: 1em;
         }
         .stories {
-            padding-bottom: 1em;
+            grid-column: 2;
         }
     }
 
@@ -199,7 +198,7 @@
             grid-template-columns: 1fr 1fr;
         }
         .stories {
-            padding-bottom: 0;
+            grid-column: auto;
         }   
     }
 
