--- a/style-human.css
+++ b/style-human.css
@@ -1619,16 +1619,12 @@ img#portrait {
   }
   @media screen and (min-width: 500px) {
     .stories-gallery {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-      -ms-flex-pack: center;
-          justify-content: center;
+      grid-template-columns: 10% 90% 10%;
+      grid-row-gap: 1em;
     }
 
     .stories {
-      padding-bottom: 1em;
+      grid-column: 2;
     }
   }
   @media screen and (min-width: 768px) {
@@ -1638,7 +1634,7 @@ img#portrait {
     }
 
     .stories {
-      padding-bottom: 0;
+      grid-column: auto;
     }
   }
   @media screen and (min-width: 992px) {
