--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -97,101 +97,97 @@
 
 .stories {
     max-width: 470px;
+    position: relative;
+    margin: 0 auto;
     a {
         text-decoration: none;
     }
 
-    figure {
-        
-        img {
+    figcaption {
+        position: absolute;
+        z-index: 10;
+        top: 34%;
+        color: #fff;
+        padding: 1.5em; 
+        font-size: 0.85em; // mobile size
+        line-height: 125%; // mobile size
+        width: 100%;
+        text-align: center;
+    }
+    h2 {
+        margin: 0;
+        line-height: 125%; // mobile size
+        font-size: 17px; // mobile size
+        font-weight: 800;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        background-color:rgba(0,0,0,0.6);
+        padding: 1em;
+    }
+    p {
+        margin: 0;
+        padding: 0 1em 0.5em 1em; // mobile size
+        display: none;
+    }
+}
+
+@media screen and (min-width: 415px) {
+    .stories figure h2 {
+        font-size: 25px;
+    }
     
-        }
-        figcaption {
-                color: #fff;
-                padding: 1.5em; 
-                font-size: 0.85em; // mobile size
-                line-height: 125%; // mobile size
-        }
-        h2 {
-            margin: 0;
-            line-height: 125%; // mobile size
-            font-size: 17px; // mobile size
-            font-weight: 800;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-        p {
-            margin: 0;
-            padding: 0 1em 0.5em 1em; // mobile size
-        }
+    .stories figure figcaption {
+        font-size: 1em;
     }
 }
 
 /** Story Effect **/
-@supports (grid-area: auto) {  
-    .stories-gallery {
-        display: grid;
-        grid-gap: 1em;
-    }
-    .effect-story {
-        background: #030c17;
-        display: grid;
-        img, figcaption {
-            grid-column: 1;
-            grid-row: 1;
-        }
-        figcaption {
-            transition: all 1.5s;
-            background-color: transparent;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            opacity: 0;
-            font-family: $font__sans;
-        }
-        p {
-            text-align: center;
-        }
-        &:hover figcaption, &:focus figcaption {
-            opacity: 1;
-            transition: all 0.75s;
-            background-color:rgba(0,0,0,0.6);
-        } 
-    }
-
-    @media screen and (min-width: 415px) {
-        .stories figure h2 {
-            font-size: 25px;
-        }
-        
-        .stories figure figcaption {
-            font-size: 1em;
-        }
-
-    }
-
-    @media screen and (min-width: 520px) {
-        .stories-gallery {
-            grid-template-columns: 1fr 470px 1fr;
-            grid-row-gap: 1em;
-        }
-        .stories {
-            grid-column: 2;
-        }
-    }
-
+@supports (grid-area: auto) { 
     @media screen and (min-width: $query__small) {
-    	.stories-gallery {
+        .stories-gallery {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            grid-gap: 1em;
         }
         .stories {
-            grid-column: auto;
-        }   
+            margin: 0;
+        }
+        .effect-story {
+            background: #030c17;
+            display: grid;
+            img, figcaption {
+                grid-column: 1;
+                grid-row: 1;
+            }
+            h2 {
+                background-color: transparent;
+                padding: 0;
+            }
+            figcaption {
+                position: static;
+                transition: all 1.5s;
+                background-color: transparent;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                opacity: 0;
+                font-family: $font__sans;
+                top: 0;
+                right: 0;
+            }
+            figcaption p {
+                text-align: center;
+                display: block;
+            }
+            &:hover figcaption, &:focus figcaption {
+                opacity: 1;
+                transition: all 0.75s;
+                background-color:rgba(0,0,0,0.6);
+            } 
+        }
     }
-
 
     @media screen and (min-width: 1095px) {
         .stories-gallery {
@@ -208,9 +204,8 @@
                         font-size: 0.85em;
                     }
                 }
-            }
-            
         }
+    }
         .double {
             grid-column: span 2;
             grid-row: span 2;
