--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -123,6 +123,7 @@
         letter-spacing: 1px;
         background-color:rgba(0,0,0,0.6);
         padding: 1em;
+        border-radius: 1em;
     }
     p {
         margin: 0;
@@ -162,6 +163,7 @@
             h2 {
                 background-color: transparent;
                 padding: 0;
+                border-radius: 0;
             }
             figcaption {
                 position: static;
